# Emoji-Bench-Code

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  benchmark.html  cleanup.md  codex_plan.md  continue.md  eval.sh  index.html  note.md  note2.md  note_2.md  operation-table.html  plan.md  pyproject.toml  requirements.txt  run-grok.sh  run.sh  run_google.sh  run_gpt.sh  run_gpt_small.sh  run_l1_claude.sh  run_l1_gpt.sh  run_magistral.sh  run_sonnet.sh  website_metric.md
emoji_bench/: benchmark_types.py  chain_generator.py  chain_types.py  continuation_benchmark.py  continuation_dataset.py  continuation_formatter.py  continuation_judge.py  continuation_provider.py  continuation_provider_anthropic.py  continuation_provider_gemini.py  continuation_provider_mistral.py  continuation_provider_openai.py  continuation_scorer.py  continuation_transport.py  continuation_validator.py  dataset.py  dataset_io.py  error_injector.py  eval_matrix.py  evaluation_runner.py  expressions.py  formatter.py  generator.py  interpreter.py  judge_artifacts.py  model_registry.py  operations.py  pipeline_paths.py  provider_clients.py  symbols.py  transforms.py  types.py
scripts/: backfill_mechanical_correct.py  evaluate_anthropic.py  evaluate_continuation.py  generate_clean_control_dataset.py  generate_continuation_dataset.py  judge_continuation.py  make_boxed_dataset.py  plot_b_final_answer.py  plot_b_mechanical.py  plot_b_results.py  preview_dataset.py  score_continuation.py
tests/: script_helpers.py  test_chain_generator.py  test_continuation_benchmark.py  test_continuation_judge.py  (+25 more)
(+565 files in other folders)
